Coloreo secuencial terminado